# axiom

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  package.json  pyproject.toml  turbo.json
.github/workflows/: docker-image.yml
apps/server/: .gitignore  openapi.json  package.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 26a03e348679_add_financial_data_models_for_equities_.py  4a769cc8eb37_add_financial_data_models_for_equities_.py  720233060e91_add_financial_data_models_for_equities_.py  da27ff042f00_add_oauth_states_table.py
apps/server/axiom/: auth.py  config.py  database.py  env.py  main.py  schwab_auth.py
apps/server/axiom/api/auth/: schwab.py
apps/server/axiom/db/models/: __init__.py  _partitions.py  account.py  chart.py  enums.py  exchange.py  level_one.py  level_two.py  oauth.py  option_contract.py  option_quote.py  security.py  subscription.py  transaction.py
apps/server/axiom/lib/: beque.py
apps/server/axiom/mdata/: __init__.py  accounts.py  auth.py  streaming.py  subscriptions.py
apps/server/axiom/schwab/: __init__.py  auth.py
apps/server/scripts/: openapi.py  securities.py  stream.py  subscribe.py  test_accounts.py  test_stream_l1.py  test_stream_l2.py  test_transactions.py
apps/web/: biome.json  next.config.ts  openapi-ts.config.ts  package.json
apps/web/src/: env.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/account/: account-form.tsx  page.tsx
apps/web/src/app/api/auth/schwab/callback/: route.ts
apps/web/src/app/auth/confirm/: page.tsx  route.ts
apps/web/src/app/auth/signout/: route.ts
apps/web/src/app/error/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/oauth/callback/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/schwab/: page.tsx
apps/web/src/app/schwab/error/: page.tsx
apps/web/src/app/schwab/success/: page.tsx
apps/web/src/components/: Header.tsx
apps/web/src/components/auth/: LoginForm.tsx  SignUpForm.tsx  UserProfile.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/lib/api/: sdk.gen.ts  types.gen.ts
apps/web/src/lib/api/client/: client.gen.ts  types.gen.ts
apps/web/src/utils/supabase/: middleware.ts
axiom/: __init__.py  config.py  schwab_auth.py  schwab_client.py  schwab_models.py  schwab_models_account.py  supabase.py
axiom/db/: __init__.py  auth.py
axiom/mdata/: __init__.py  account.py  equity.py  options.py
axiom/models/: __init__.py  weekly_resistance.py
axiom/store/: __init__.py  cache.py
axiom/ws/: __init__.py  equity_level_one.py
data/daily/: SPY_2024-07-20.csv
data/models/: weekly_resistance_model_high_SPY.json  weekly_resistance_model_low_SPY.json  xgb_resistance_model_high.json  xgb_resistance_model_low_SPY.json
notebooks/: accounts.ipynb  resistance-model-inference.ipynb  resistance-model.ipynb
notebooks/resistance_model/: SPY_resistance.jsonl  fn.ipynb  prepare_dataset.ipynb
scripts/: generate_schwab_models.sh  server.sh  setup.py
scripts/mdata/: download_daily_dataset.py  save_daily_dataset.py
server/: __init__.py  load.py  main.py
server/router/: __init__.py  account.py  auth.py  equity.py  ml.py  stream.py
