[tool.poetry]
name = "axiom"
version = "0.1.0"
description = "Axiom"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12 <3.13"
fastapi = "^0.111.0"
matplotlib = "^3.9.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
pydantic = "^2.8.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
requests = "^2.32.3"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
streamlit = "^1.36.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
