[tool.poetry]
name = "axiom"
version = "0.1.0"
description = "Axiom"
authors = ["Punit Arani <punitsai36@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12 <3.13"
aiolimiter = "^1.1.0"
backoff = "^2.2.1"
diskcache = "^5.6.3"
fastapi = "^0.111.0"
fastapi-cache2 = "^0.2.1"
fastparquet = "^2024.5.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
mpld3 = "^0.5.10"
notebook = "^7.2.1"
numpy = "^1.26.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
pydantic = "^2.8.2"
requests = "^2.32.3"
scikit-learn = "^1.5.1"
schwab-py = ">=1.2.1,<1.4"
scipy = "^1.14.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
streamlit = "^1.38.0"
supabase = "^2.7.4"
torch = "^2.3.1"
tqdm = "^4.66.5"
websockets = "^12.0"
xgboost = "^2.1.0"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.4.2" }
datamodel-code-generator = "^0.25.8"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
python-dotenv = "^1.0.1"
ruff = "^0.5.1"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
multi_line_output = 3
force_grid_wrap = 0
known_first_party = "axiom"

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
