[project]
name = "axiom"
version = "0.1.0"
description = "Axiom Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authlib>=1.6.3",
    "fastapi[standard]>=0.116.1",
    "pyjwt>=2.10.1",
    "schwab-py>=1.5.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "supabase>=2.18.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
    "ruff>=0.12.10",
]

[tool.setuptools.packages.find]
include = ["axiom"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
package = true
